[package]
name = "template"
version = "0.1.0"
edition = "2021"
publish = ["metaswitch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
itertools = "0.10.3"
dateparser = "0.1.6"
chrono = "0.4.19"
counter = "0.5.2"
log = "0.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12"
rand = "0.8.5"
nalgebra = "0.31.0"
